--- a/public/chart.html
+++ b/public/chart.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="DS">
-  <title>Test Site</title>
+  <title>HlStatsX Chart</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,9 +47,9 @@
                 Manage Servers
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <button id="addServer" class="dropdown-item" data-toggle="modal" data-target="#serverModal">Add a new server</a>
-                <button class="dropdown-item" data-toggle="modal" data-target="#serverModal">Edit current server</a>
-                <button class="dropdown-item" data-toggle="modal" data-target="#serverModal">Delete current server</a>
+                <button id="addServer" class="dropdown-item" data-toggle="modal" data-target="#serverModal">Add a new server</button>
+                <button id="editServer" class="dropdown-item" data-toggle="modal" data-target="#serverModal">Edit current server</button>
+                <button id="deleteServer" class="dropdown-item" data-toggle="modal" data-target="#serverModal">Delete current server</button>
               </div>
             </li>
           </ul>
